--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f3c19dfc",
+   "id": "b13ba542",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1b742c0",
+   "id": "b5641a97",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a07013eb",
+   "id": "f2e2bf84",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7fe2c76c",
+   "id": "4048f2cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4767dbcf",
+   "id": "dad30c62",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f3791ce1",
+   "id": "7ed94c44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b8c1a3a",
+   "id": "02ab58a6",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89c8fd2",
+   "id": "05672639",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3b6006d6",
+   "id": "f1dad9f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6ce624c5",
+   "id": "11ed398c",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f98a72d2",
+   "id": "0b504ac0",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e497e0d7",
+   "id": "3b941792",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "feddfe73",
+   "id": "d727b304",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "aa4a1d2d",
+   "id": "618ed456",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a2810a57",
+   "id": "0b81c7b6",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7bfee2d4",
+   "id": "6338efb4",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8be487ae",
+   "id": "b35df36f",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb7a2265",
+   "id": "034abcb1",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "abb44680",
+   "id": "fc492eba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "31a02bc2",
+   "id": "e7029252",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b18336cb",
+   "id": "d3b0a02f",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33b16b19",
+   "id": "98ea47ff",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f8238536",
+   "id": "06280a47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "33cf80bc",
+   "id": "37080151",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "64b16208",
+   "id": "ec5deb78",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "edf38010",
+   "id": "62230f67",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ae1783c3",
+   "id": "23b0a82a",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "01b6b371",
+   "id": "f9735e91",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7ee328ea",
+   "id": "c9eca85e",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ea9da5f",
+   "id": "e8c3d566",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "94191f64",
+   "id": "63221f66",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8168388a",
+   "id": "418fe2e8",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7f58fcd4",
+   "id": "c1695555",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0f7c4e5b",
+   "id": "3481ecab",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f5436df0",
+   "id": "50d82a1a",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb30b63",
+   "id": "3faa7245",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a5c288f5",
+   "id": "8f25e7c9",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f510eede",
+   "id": "80ad5036",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d5fcb96",
+   "id": "20a5cb0c",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9fbc3943",
+   "id": "b768736a",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87ab6b50",
+   "id": "fdd97c2d",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "81196919",
+   "id": "eef36fdf",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "67853b9e",
+   "id": "d09d5039",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb2bd810",
+   "id": "d05e86e5",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "af269f70",
+   "id": "6edbdd88",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ff746223",
+   "id": "8073aea7",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "5b854300",
+   "id": "817595db",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "073d33a3",
+   "id": "c059c594",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c91c6a9a",
+   "id": "855b12b8",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ee7b272",
+   "id": "ab3739f5",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4118df18",
+   "id": "7fd45b56",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "0e398e1b",
+   "id": "a0d37671",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a97a09bb",
+   "id": "0a8c8374",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4dcd9a29",
+   "id": "8c8163d0",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "b2a16988",
+   "id": "144bcb02",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4237b366",
+   "id": "199dbcdb",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "25f1a71b",
+   "id": "80e606eb",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "db603fa5",
+   "id": "7050f592",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "49a69c1f",
+   "id": "7dd0ac69",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "7374c245",
+   "id": "454a7819",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3ab134fd",
+   "id": "046d05a9",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "02cfaaae",
+   "id": "baccdc99",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0137ee0",
+   "id": "d90ad1c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a578179c",
+   "id": "c097a3a1",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "792d5c75",
+   "id": "c9b9d2ab",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6b38f1f1",
+   "id": "742836eb",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d2be06e1",
+   "id": "ae64e0f2",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6999624d",
+   "id": "e5d5c95d",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90cbc424",
+   "id": "f3bf4a9f",
    "metadata": {},
    "source": [
     "# Files\n",
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "eab7e020",
+   "id": "c3c30163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "890ab3aa",
+   "id": "6dc3eaf0",
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2111,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "47b3f6cd",
+   "id": "5d8cb5db",
    "metadata": {},
    "outputs": [
     {
@@ -2542,7 +2542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "add5254d",
+   "id": "7185037c",
    "metadata": {},
    "source": [
     "# Exercise: Word count\n",
@@ -2561,7 +2561,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "1d6828a0",
+   "id": "74e73885",
    "metadata": {},
    "outputs": [
     {
@@ -2589,8 +2589,10 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a9f1ca28",
-   "metadata": {},
+   "id": "6a212c89",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2624,8 +2626,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "be13aa7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lines: 11\n",
+      "characters: 165\n",
+      "words: 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's rewrite this code, so that we don't accumulate our information into\n",
+    "# three variables, but rather into one.\n",
+    "\n",
+    "# I can use a dictionary to keep track of all of them!\n",
+    "\n",
+    "counts = {'lines':0,\n",
+    "          'characters':0,\n",
+    "         'words':0}\n",
+    "\n",
+    "for one_line in open('wcfile.txt'): \n",
+    "    counts['lines'] += 1   # each iteration means 1 more line\n",
+    "    \n",
+    "    counts['characters'] += len(one_line)   # how many characters in the current line? add to number_of_characters\n",
+    "    \n",
+    "    words_on_line = one_line.split()\n",
+    "    counts['words'] += len(words_on_line)   # how many words on this line? Add to the running total\n",
+    "    \n",
+    "for key, value in counts.items():\n",
+    "    print(f'{key}: {value}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "ae267423",
+   "id": "fe282d96",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2638,10 +2678,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "366d708e",
+   "id": "e8566c55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# wh"
+   ]
   }
  ],
  "metadata": {
