--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b13ba542",
+   "id": "da0e012d",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5641a97",
+   "id": "2152cf00",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2e2bf84",
+   "id": "2563785b",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4048f2cd",
+   "id": "3e653930",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dad30c62",
+   "id": "482d088c",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7ed94c44",
+   "id": "a945d90a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ab58a6",
+   "id": "825307b5",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05672639",
+   "id": "5b4b2fb6",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f1dad9f2",
+   "id": "f375a37a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "11ed398c",
+   "id": "3484b3a2",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0b504ac0",
+   "id": "45f78751",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3b941792",
+   "id": "1ef7409d",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d727b304",
+   "id": "8f81e6a8",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "618ed456",
+   "id": "3dcc5178",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0b81c7b6",
+   "id": "cc96ff52",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6338efb4",
+   "id": "716e85a0",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b35df36f",
+   "id": "7de6994a",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "034abcb1",
+   "id": "3dffc607",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fc492eba",
+   "id": "3cbf5393",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e7029252",
+   "id": "f4a522db",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d3b0a02f",
+   "id": "24a840bb",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98ea47ff",
+   "id": "7bfd4f87",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "06280a47",
+   "id": "c1696bff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "37080151",
+   "id": "248f68b2",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ec5deb78",
+   "id": "55bdcd13",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "62230f67",
+   "id": "cbd9c59f",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "23b0a82a",
+   "id": "82eb5e08",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f9735e91",
+   "id": "b545bc29",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c9eca85e",
+   "id": "b607fe64",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8c3d566",
+   "id": "2909e994",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "63221f66",
+   "id": "f952d23b",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "418fe2e8",
+   "id": "13c64f09",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c1695555",
+   "id": "9ee529d7",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3481ecab",
+   "id": "ce11d7e9",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "50d82a1a",
+   "id": "504c471a",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3faa7245",
+   "id": "531b0027",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8f25e7c9",
+   "id": "fe712667",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80ad5036",
+   "id": "64fc75e7",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a5cb0c",
+   "id": "eec77fb3",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b768736a",
+   "id": "d104579b",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd97c2d",
+   "id": "ef825356",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "eef36fdf",
+   "id": "9d595de0",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d09d5039",
+   "id": "b1d586af",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d05e86e5",
+   "id": "84893d24",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6edbdd88",
+   "id": "8490110a",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "8073aea7",
+   "id": "745ae515",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "817595db",
+   "id": "2e2a7f1f",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c059c594",
+   "id": "abdc10a3",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "855b12b8",
+   "id": "89a933a0",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab3739f5",
+   "id": "6af6c0e6",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fd45b56",
+   "id": "35f06dea",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a0d37671",
+   "id": "119d4e1e",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0a8c8374",
+   "id": "b8251c0f",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8c8163d0",
+   "id": "e22a55a5",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "144bcb02",
+   "id": "56525263",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "199dbcdb",
+   "id": "4fc439d1",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "80e606eb",
+   "id": "58aea658",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "7050f592",
+   "id": "7fe30b69",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "7dd0ac69",
+   "id": "1d899ec4",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "454a7819",
+   "id": "8c1949bf",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "046d05a9",
+   "id": "a7f836c4",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "baccdc99",
+   "id": "b3038d24",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d90ad1c9",
+   "id": "dd9caf6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c097a3a1",
+   "id": "4120c23e",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "c9b9d2ab",
+   "id": "4936f50e",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "742836eb",
+   "id": "3d86567a",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "ae64e0f2",
+   "id": "5fe5aa0c",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d5c95d",
+   "id": "d6863574",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3bf4a9f",
+   "id": "dd9bbace",
    "metadata": {},
    "source": [
     "# Files\n",
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c3c30163",
+   "id": "6a5ddcf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "6dc3eaf0",
+   "id": "acb943cc",
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2111,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "5d8cb5db",
+   "id": "e276598b",
    "metadata": {},
    "outputs": [
     {
@@ -2542,7 +2542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7185037c",
+   "id": "08c791a0",
    "metadata": {},
    "source": [
     "# Exercise: Word count\n",
@@ -2561,7 +2561,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "74e73885",
+   "id": "a5fd696b",
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2589,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "6a212c89",
+   "id": "33aa99eb",
    "metadata": {
     "scrolled": true
    },
@@ -2628,7 +2628,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "be13aa7a",
+   "id": "fc7f91ee",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe282d96",
+   "id": "74fca217",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2677,13 +2677,156 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "id": "e0cbec2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# This is a comment\n",
+      "\n",
+      "# You should ignore me\n",
+      "\n",
+      "root:x:0:0:root:/root:/bin/bash\n",
+      "\n",
+      "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
+      "\n",
+      "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
+      "\n",
+      "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n",
+      "\n",
+      "sync:x:4:65534:sync:/bin:/bin/sync\n",
+      "\n",
+      "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n",
+      "\n",
+      "man:x:6:12:man:/var/cache/man:/usr/sbin/nologin\n",
+      "\n",
+      "lp:x:7:7:lp:/var/spool/lpd:/usr/sbin/nologin\n",
+      "\n",
+      "mail:x:8:8:mail:/var/mail:/usr/sbin/nologin\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "news:x:9:9:news:/var/spool/news:/usr/sbin/nologin\n",
+      "\n",
+      "uucp:x:10:10:uucp:/var/spool/uucp:/usr/sbin/nologin\n",
+      "\n",
+      "proxy:x:13:13:proxy:/bin:/usr/sbin/nologin\n",
+      "\n",
+      "www-data:x:33:33:www-data:/var/www:/usr/sbin/nologin\n",
+      "\n",
+      "backup:x:34:34:backup:/var/backups:/usr/sbin/nologin\n",
+      "\n",
+      "list:x:38:38:Mailing List Manager:/var/list:/usr/sbin/nologin\n",
+      "\n",
+      "irc:x:39:39:ircd:/var/run/ircd:/usr/sbin/nologin\n",
+      "\n",
+      "gnats:x:41:41:Gnats Bug-Reporting System (admin):/var/lib/gnats:/usr/sbin/nologin\n",
+      "\n",
+      "\n",
+      "\n",
+      "nobody:x:65534:65534:nobody:/nonexistent:/usr/sbin/nologin\n",
+      "\n",
+      "syslog:x:101:104::/home/syslog:/bin/false\n",
+      "\n",
+      "messagebus:x:102:106::/var/run/dbus:/bin/false\n",
+      "\n",
+      "landscape:x:103:109::/var/lib/landscape:/bin/false\n",
+      "\n",
+      "jci:x:955:955::/home/jci:/bin/bash\n",
+      "\n",
+      "sshd:x:104:65534::/var/run/sshd:/usr/sbin/nologin\n",
+      "\n",
+      "user:x:1000:1000:user,,,:/home/user:/bin/bash\n",
+      "\n",
+      "reuven:x:1001:1001:Reuven M. Lerner,,,:/home/reuven:/bin/bash\n",
+      "\n",
+      "postfix:x:105:113::/var/spool/postfix:/bin/false\n",
+      "\n",
+      "colord:x:106:116:colord colour management daemon,,,:/var/lib/colord:/bin/false\n",
+      "\n",
+      "postgres:x:107:117:PostgreSQL administrator,,,:/var/lib/postgresql:/bin/bash\n",
+      "\n",
+      "dovecot:x:108:119:Dovecot mail server,,,:/usr/lib/dovecot:/bin/false\n",
+      "\n",
+      "dovenull:x:109:120:Dovecot login user,,,:/nonexistent:/bin/false\n",
+      "\n",
+      "postgrey:x:110:121::/var/lib/postgrey:/bin/false\n",
+      "\n",
+      "debian-spamd:x:111:122::/var/lib/spamassassin:/bin/sh\n",
+      "\n",
+      "memcache:x:113:124:Memcached,,,:/nonexistent:/bin/false\n",
+      "\n",
+      "genadi:x:1002:1003:Genadi Reznichenko,,,:/home/genadi:/bin/bash\n",
+      "\n",
+      "shira:x:1003:1004:Shira Friedman,,,:/home/shira:/bin/bash\n",
+      "\n",
+      "atara:x:1004:1005:Atara Lerner-Friedman,,,:/home/atara:/bin/bash\n",
+      "\n",
+      "shikma:x:1005:1006:Shikma Lerner-Friedman,,,:/home/shikma:/bin/bash\n",
+      "\n",
+      "amotz:x:1006:1007:Amotz Lerner-Friedman,,,:/home/amotz:/bin/bash\n",
+      "\n",
+      "mysql:x:114:125:MySQL Server,,,:/nonexistent:/bin/false\n",
+      "\n",
+      "clamav:x:115:126::/var/lib/clamav:/bin/false\n",
+      "\n",
+      "amavis:x:116:127:AMaViS system user,,,:/var/lib/amavis:/bin/sh\n",
+      "\n",
+      "opendkim:x:117:128::/var/run/opendkim:/bin/false\n",
+      "\n",
+      "gitlab-redis:x:999:1009::/var/opt/gitlab/redis:/bin/nologin\n",
+      "\n",
+      "gitlab-psql:x:998:1010::/var/opt/gitlab/postgresql:/bin/sh\n",
+      "\n",
+      "git:x:1007:1008:GitLab,,,:/home/git:/bin/bash\n",
+      "\n",
+      "opendmarc:x:118:129::/var/run/opendmarc:/bin/false\n",
+      "\n",
+      "dkim-milter-python:x:119:130::/var/run/dkim-milter-python:/bin/false\n",
+      "\n",
+      "deploy:x:1008:1011:Deploy,,,:/home/deploy:/bin/bash\n",
+      "\n",
+      "redis:x:112:123:redis server,,,:/var/lib/redis:/bin/false\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what if the file contains things we don't care about, or want?\n",
+    "# we can always use an \"if\" statement to decide if the current line is interesting\n",
+    "# if so, we go ahead and do our thing... if not, then we go onto the next line.\n",
+    "\n",
+    "# for example, I have a file here, linux-etc-passwd.txt, which is based on the standard\n",
+    "# Linux (Unix) \"passwd\" file where usernames and info are stored.\n",
+    "\n",
+    "# Each line of the file should contain the username, user ID, group ID, etc., separated by : characters\n",
+    "\n",
+    "# We need to ignore comment lines and blank lines\n",
+    "\n",
+    "for one_line in open('linux-etc-passwd.txt'):\n",
+    "    if one_line.startswith('#'):\n",
+    "        continue  # ignore comment lines\n",
+    "        \n",
+    "    if one_line.strip() == '':\n",
+    "        c\n",
+    "    \n",
+    "    print(one_line)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e8566c55",
+   "id": "d8f87106",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# wh"
-   ]
+   "source": []
   }
  ],
  "metadata": {
